--- a/exp_must_azure_test/views/dashboard.handlebars
+++ b/exp_must_azure_test/views/dashboard.handlebars
@@ -41,22 +41,20 @@
 			</div>
 		</div>
 		<div class="basis-1/3 flex flex-col gap-6">
-			<div class="basis-1/2 rounded-md bg-slate-600  rounded-md shadow-lg  flex flex-col gap-6 justify-center items-center">
+			<div class="basis-1/2 rounded-md bg-cyan-300  rounded-md shadow-lg flex flex-col gap-6 justify-center items-center shadow-cyan-300">
 <!--                <a href="/organigramme" class="h-fit">-->
 <!--                <p class="relative md:text-xl md:font-bold whitespace-pre-line text-center mt-4">Mon organigramme</p>-->
 <!--                    </a>-->
-                <a href="/listFile" class="h-fit">
-                    <button class="group relative h-fit p-2 rounded-full bg-slate-700 drop-shadow-lg shadow-gray-600">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 fill-slate-400 group-hover:h-12 group-hover:w-12" viewBox="2 1 20 20">
-                            <path fill-rule="evenodd" d="M2.25 12.75V12A2.25 2.25 0 014.5 9.75h15A2.25 2.25 0 0121.75 12v.75m-8.69-6.44l-2.12-2.12a1.5 1.5 0 00-1.061-.44H4.5A2.25 2.25 0 002.25 6v12a2.25 2.25 0 002.25 2.25h15A2.25 2.25 0 0021.75 18V9a2.25 2.25 0 00-2.25-2.25h-5.379a1.5 1.5 0 01-1.06-.44z" clip-rule="evenodd" />
-                        </svg>
-                    </button>
-                </a>
-
-
-                <p class="relative md:text-xl md:font-bold whitespace-pre-line text-center ">Mes documents administratifs</p>
-                </a>
-            </div>
+					<a href="/listFile" class="h-fit">
+							<button class="group relative h-fit p-2 rounded-full bg-cyan-700 drop-shadow-lg shadow-gray-600">
+									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="h-10 w-10 fill-cyan-300 group-hover:h-12 group-hover:w-12">
+										<path d="M19.5 21a3 3 0 003-3v-4.5a3 3 0 00-3-3h-15a3 3 0 00-3 3V18a3 3 0 003 3h15zM1.5 10.146V6a3 3 0 013-3h5.379a2.25 2.25 0 011.59.659l2.122 2.121c.14.141.331.22.53.22H19.5a3 3 0 013 3v1.146A4.483 4.483 0 0019.5 9h-15a4.483 4.483 0 00-3 1.146z" />
+									</svg>
+							</button>
+					</a>
+					<p class="relative md:text-xl md:font-bold whitespace-pre-line text-center text-cyan-700">Mes documents administratifs</p>
+					</a>
+			</div>
 
 			<div class="basis-1/2 rounded-md bg-slate-600 shadow-lg"></div>
 		</div>
