refactor: views refactoring

--- a/Eashire/modules/employes/views/listUser.handlebars
+++ b/Eashire/modules/employes/views/listUser.handlebars
@@ -3,10 +3,10 @@
         {{>returnButton route="/dashboard"}}
     </div>
     <div class="grow w-fit m-auto mt-6">
-        <h1 class="text-5xl font-semibold w-fit m-auto">Liste des employés</h1>
+        {{>PageHeader header_text="Liste des employés"}}
         <ul class="w-fit m-auto mt-6 space-y-3">
             <div class="w-fit m-auto mb-6">
-                {{>button5 href='/organigramme' title='Organigramme'
+                {{>linkButton5 href='/organigramme' title='Organigramme'
                     svg='<svg class="w-6 h-6" class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"></path></svg>'
                 }}
             </div>
