--- a/Eashire/modules/candidature/views/candidatureList.handlebars
+++ b/Eashire/modules/candidature/views/candidatureList.handlebars
@@ -3,78 +3,9 @@
 		{{>returnButton route="/dashboard"}}
 	</div>
 	<div class="grow w-fit m-auto">
-		<h1 class="text-5xl font-semibold w-fit m-auto">Liste des candidatures</h1>
+		{{>PageHeader header_text="Liste des candidatures"}}
 		<div class='relative top-6 flex justify-center'>
-			<div
-				class='grow p-4 max-w-3xl bg-slate-800 rounded-lg border shadow-md sm:p-6'
-			>
-				<ul class='my-4 space-y-3'>
-					{{#each candidatureList}}
-						<li>
-							<a
-								href={{this.readLink}}
-								class='flex items-center p-3 text-base font-bold text-white bg-gray-600 rounded-lg hover:bg-gray-500 group hover:shadow'
-							>
-								{{#if this.even}}
-									<svg
-										xmlns='http://www.w3.org/2000/svg'
-										class='h-5 w-5'
-										viewBox='0 0 20 20'
-										fill='currentColor'
-									>
-										<path
-											d='M10.394 2.08a1 1 0 00-.788 0l-7 3a1 1 0 000 1.84L5.25 8.051a.999.999 0 01.356-.257l4-1.714a1 1 0 11.788 1.838L7.667 9.088l1.94.831a1 1 0 00.787 0l7-3a1 1 0 000-1.838l-7-3zM3.31 9.397L5 10.12v4.102a8.969 8.969 0 00-1.05-.174 1 1 0 01-.89-.89 11.115 11.115 0 01.25-3.762zM9.3 16.573A9.026 9.026 0 007 14.935v-3.957l1.818.78a3 3 0 002.364 0l5.508-2.361a11.026 11.026 0 01.25 3.762 1 1 0 01-.89.89 8.968 8.968 0 00-5.35 2.524 1 1 0 01-1.4 0zM6 18a1 1 0 001-1v-2.065a8.935 8.935 0 00-2-.712V17a1 1 0 001 1z'
-										></path>
-									</svg>
-								{{else}}
-									<svg
-										xmlns='http://www.w3.org/2000/svg'
-										class='h-5 w-5'
-										fill='none'
-										viewBox='0 0 24 24'
-										stroke='currentColor'
-										stroke-width='2'
-									>
-										<path d='M12 14l9-5-9-5-9 5 9 5z'></path>
-										<path
-											d='M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z'
-										></path>
-										<path
-											stroke-linecap='round'
-											stroke-linejoin='round'
-											d='M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222'
-										></path>
-									</svg>
-								{{/if}}
-								<div class='grow'>
-									<span
-										class='ml-3 whitespace-nowrap'
-									>{{this.prenom}}</span>
-									<span
-										class='ml-3 whitespace-nowrap'
-									>{{this.nom}}</span>
-								</div>
-								<div class='grow'>
-									<span
-										class='ml-5 text-gray-400 text-sm whitespace-nowrap'
-									>pour la fiche de poste :</span>
-									<span
-										class='ml-3 whitespace-nowrap'
-									>{{this.fichePoste.label}}</span>
-								</div>
-								<div class='grow'>
-									<span
-										class='ml-5 text-gray-400 text-sm whitespace-nowrap'
-									>le</span>
-									<span
-										class='ml-3 whitespace-nowrap'
-									>{{this.createdAt}}</span>
-								</div>
-							</a>
-						</li>
-					{{/each}}
-				</ul>
-			</div>
+			{{>CandidatureListUl candidature_list=candidatureList}}
 		</div>
 	</div>
 </div>
