--- a/Eashire/modules/candidature/views/candidatureRead.handlebars
+++ b/Eashire/modules/candidature/views/candidatureRead.handlebars
@@ -55,13 +55,13 @@
 
 			{{#if rh}}
 				<div id="open-notes-button" class="flex-1 flex flex-row-reverse">
-					{{>button5 href='#' title='Ouvrir les notes' svg='<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-8 h-8">
+					{{>linkButton5 href='#' title='Ouvrir les notes' svg='<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-8 h-8">
 						<path d="M11.25 4.533A9.707 9.707 0 006 3a9.735 9.735 0 00-3.25.555.75.75 0 00-.5.707v14.25a.75.75 0 001 .707A8.237 8.237 0 016 18.75c1.995 0 3.823.707 5.25 1.886V4.533zM12.75 20.636A8.214 8.214 0 0118 18.75c.966 0 1.89.166 2.75.47a.75.75 0 001-.708V4.262a.75.75 0 00-.5-.707A9.735 9.735 0 0018 3a9.707 9.707 0 00-5.25 1.533v16.103z" />
 					</svg>'}}
 				</div>
 			{{else if manager}}
 				<div id="open-notes-button" class="flex-1 flex flex-row-reverse">
-					{{>button5 href='#' title='Ouvrir les notes' svg='<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-8 h-8">
+					{{>linkButton5 href='#' title='Ouvrir les notes' svg='<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-8 h-8">
 						<path d="M11.25 4.533A9.707 9.707 0 006 3a9.735 9.735 0 00-3.25.555.75.75 0 00-.5.707v14.25a.75.75 0 001 .707A8.237 8.237 0 016 18.75c1.995 0 3.823.707 5.25 1.886V4.533zM12.75 20.636A8.214 8.214 0 0118 18.75c.966 0 1.89.166 2.75.47a.75.75 0 001-.708V4.262a.75.75 0 00-.5-.707A9.735 9.735 0 0018 3a9.707 9.707 0 00-5.25 1.533v16.103z" />
 					</svg>'}}
 				</div>
@@ -112,15 +112,15 @@
 				{{#if rh}}
 					{{#compare candidature.validationManager 0 operator="=="}}
 						<div class='mt-4 grow flex justify-center gap-6'>
-							{{>button1 href=rhValidLink title='Valider la candidature'}}
-							{{>button2 href=rhRefuseLink title='Refuser la candidature'}}
+							{{>linkButton1 href=rhValidLink title='Valider la candidature'}}
+							{{>linkButton2 href=rhRefuseLink title='Refuser la candidature'}}
 						</div>
 					{{/compare}}
 				{{else if manager}}
 					{{#compare candidature.validationRh 1 operator="=="}}
 						<div class='mt-4 grow flex justify-center gap-6'>
-							{{>button1 href=managerValidLink title='Valider la candidature'}}
-							{{>button2 href=managerRefuseLink title='Refuser la candidature'}}
+							{{>linkButton1 href=managerValidLink title='Valider la candidature'}}
+							{{>linkButton2 href=managerRefuseLink title='Refuser la candidature'}}
 						</div>
 					{{/compare}}
 				{{/if}}
@@ -150,14 +150,14 @@
 				{{#if manager}}
 					{{#compare displayTabRh 0 operator="=="}}
 					<div id="save-notes-button-manager" class="flex-1 flex flex-row-reverse">
-						{{>button5-small id="save-note-button" title='Sauvegarder la note' svg='<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+						{{>linkButton5-small id="save-note-button" title='Sauvegarder la note' svg='<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
 							<path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
 							</svg>'
 						}}
 					</div>
 					{{else}}
 					<div id="save-notes-button-manager" class="hidden flex-1 flex flex-row-reverse">
-						{{>button5-small id="save-note-button" title='Sauvegarder la note' svg='<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+						{{>linkButton5-small id="save-note-button" title='Sauvegarder la note' svg='<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
 							<path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
 							</svg>'
 						}}
@@ -167,14 +167,14 @@
 					{{#if rh}}
 						{{#compare displayTabRh 0 operator="=="}}
 						<div id="save-notes-button-rh" class="hidden flex-1 flex flex-row-reverse">
-							{{>button5-small id="save-note-button" title='Sauvegarder la note' svg='<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+							{{>linkButton5-small id="save-note-button" title='Sauvegarder la note' svg='<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
 								<path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
 								</svg>'
 							}}
 						</div>
 						{{else}}
 						<div id="save-notes-button-rh" class="flex-1 flex flex-row-reverse">
-							{{>button5-small id="save-note-button" title='Sauvegarder la note' svg='<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+							{{>linkButton5-small id="save-note-button" title='Sauvegarder la note' svg='<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
 								<path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
 								</svg>'
 							}}
