--- a/Eashire/modules/ficheposte/views/fichePoste.handlebars
+++ b/Eashire/modules/ficheposte/views/fichePoste.handlebars
@@ -3,12 +3,12 @@
 		{{>returnButton route="/ficheposte/list"}}
 	</div>
 	<div class="grow p-6">
-		<h1 class="text-5xl font-semibold w-fit m-auto">Liste des fiches de poste</h1>
+		{{>PageHeader header_text="Fiche de poste"}}
 	</div>
 </div>
 
 <div class="w-fit m-auto">
-	{{>button4 href='/ficheposte/list' title='Voir les fiches de postes'
+	{{>linkButton4 href='/ficheposte/list' title='Voir les fiches de postes'
             svg="<svg xmlns='http://www.w3.org/2000/svg' class='w-6 h-6' fill='currentColor' viewBox='0 0 20 20'><path d='M9 2a1 1 0 000 2h2a1 1 0 100-2H9z'></path>
 		<path fill-rule='evenodd' d='M4 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v11a2 2 0 01-2 2H6a2 2 0 01-2-2V5zm9.707 5.707a1 1 0 00-1.414-1.414L9 12.586l-1.293-1.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z' clip-rule='evenodd'></path></svg>"
 	}}
@@ -125,9 +125,7 @@
 				<option value='TRES-URGENT'>TRES-URGENT</option>
 			</select>
 		</div>
-		<button
-			type='submit'
-			class='text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-800 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center'
-		>Créer la fiche de poste</button>
+		
+		{{>FormButton1 button_text="Créer la fiche de poste"}}
 	</form>
 </div>
