--- a/Eashire/modules/ficheposte/views/fichePosteList.handlebars
+++ b/Eashire/modules/ficheposte/views/fichePosteList.handlebars
@@ -6,14 +6,15 @@
 	{{/if}}
 
 	<div class="grow w-fit m-auto">
-		<h1 class="text-5xl font-semibold w-fit m-auto">Liste des fiches de poste</h1>
+		{{>PageHeader header_text="Liste des fiches de poste"}}
+
 		<div class='relative min-w-[30%] m-6 flex flex-col justify-center'>
 			<div
 				class='grow p-4 max-w-3xl m-auto bg-slate-800 rounded-lg border shadow-md sm:p-6'
 			>
 				{{#if displayValidationIcons}}
 				<div class="mb-6 w-fit m-auto">
-					{{>button5 href='/ficheposte/create' title='Créer une fiche de poste' svg='<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+					{{>linkButton5 href='/ficheposte/create' title='Créer une fiche de poste' svg='<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
 						<path stroke-linecap="round" stroke-linejoin="round" d="M12 10.5v6m3-3H9m4.06-7.19l-2.12-2.12a1.5 1.5 0 00-1.061-.44H4.5A2.25 2.25 0 002.25 6v12a2.25 2.25 0 002.25 2.25h15A2.25 2.25 0 0021.75 18V9a2.25 2.25 0 00-2.25-2.25h-5.379a1.5 1.5 0 01-1.06-.44z" />
 					</svg>'}}
 				</div>
