--- a/Eashire/modules/ficheposte/views/components/FichePosteListItemValidationDiv.handlebars
+++ b/Eashire/modules/ficheposte/views/components/FichePosteListItemValidationDiv.handlebars
@@ -1,20 +1,20 @@
 {{#compare validation 0 operator='=='}}
   <div
     class='bg-slate-300 rounded p-2'
-  >RH</div>
+  >{{text}}</div>
 {{else}}
   {{#compare validation 1 operator='=='}}
     <div
       class='bg-green-400 rounded p-2'
     >
-      RH
+      {{text}}
     </div>
   {{else}}
     {{#compare validation 2 operator='=='}}
       <div
         class='bg-red-400 rounded p-2'
       >
-        RH
+        {{text}}
       </div>
     {{/compare}}
   {{/compare}}
