--- a/Eashire/public/stylesheets/style.css
+++ b/Eashire/public/stylesheets/style.css
@@ -679,6 +679,10 @@ video {
   margin-bottom: 1.5rem;
 }
 
+.mt-20 {
+  margin-top: 5rem;
+}
+
 .mt-10 {
   margin-top: 2.5rem;
 }
@@ -807,6 +811,10 @@ video {
   width: 80%;
 }
 
+.w-3\/4 {
+  width: 75%;
+}
+
 .w-1\/3 {
   width: 33.333333%;
 }
@@ -865,6 +873,10 @@ video {
 
 .basis-1\/2 {
   flex-basis: 50%;
+}
+
+.basis-1\/4 {
+  flex-basis: 25%;
 }
 
 .origin-\[0\] {
@@ -1774,6 +1786,11 @@ video {
   .dark\:text-white {
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity));
+  }
+
+  .dark\:text-gray-400 {
+    --tw-text-opacity: 1;
+    color: rgb(156 163 175 / var(--tw-text-opacity));
   }
 
   .dark\:hover\:bg-gray-500:hover {
