--- a/Eashire/modules/ficheposte/views/components/fichePosteReadComponent.handlebars
+++ b/Eashire/modules/ficheposte/views/components/fichePosteReadComponent.handlebars
@@ -444,6 +444,28 @@
 				</ul>
 			</div>
 			{{#compare displayValidationButtons 1 operator="=="}}
+				{{#if manager}}
+					{{#if current_owner}}
+						<div class='grow flex justify-center bg-slate-800 gap-6'>
+							<a
+								href={{archiveLink}}
+								id="archive-button"
+								class='flex items-center p-3 text-base font-bold text-white bg-sky-700 rounded-lg hover:bg-sky-600 group hover:shadow'
+							>
+								{{>folder-outline class="w-5 h-5"}}
+								<span class='ml-2 flex-1 whitespace-nowrap'>Archiver</span>
+							</a>
+							<a
+								href={{deleteLink}}
+								id="delete-button"
+								class='flex items-center p-3 text-base font-bold text-white bg-red-700 rounded-lg hover:bg-red-600 group hover:shadow'
+							>
+								{{>trash-outline class="w-5 h-5"}}
+								<span class='ml-2 flex-1 whitespace-nowrap'>Supprimer</span>
+							</a>
+						</div>
+					{{/if}}
+				{{/if}}
 				{{#if rh}}
 					{{#compare fichePoste.validationFinance 0 operator="=="}}
 						{{#compare fichePoste.publicationRH 0 operator="=="}}
