--- a/Eashire/modules/ficheposte/views/fichePosteList.handlebars
+++ b/Eashire/modules/ficheposte/views/fichePosteList.handlebars
@@ -24,6 +24,8 @@
 
 						{{>ownerFilter}}
 
+						{{>archivedFilter}}
+
 						<div class='w-fit m-auto'>
 							{{>FormButton1 button_text="Rechercher"}}
 						</div>
