--- a/Eashire/modules/ficheposte/views/components/fichePosteReadComponent.handlebars
+++ b/Eashire/modules/ficheposte/views/components/fichePosteReadComponent.handlebars
@@ -1,7 +1,7 @@
 <div class='relative top-6 flex justify-center'>
 	<div id='ficheposteread-div'>
 		<div
-			class='grow p-4 max-w-2xl bg-slate-800 rounded-lg border shadow-md sm:p-8'
+			class='grow py-8 px-12 max-w-2xl bg-slate-800 rounded-lg border shadow-md'
 		>
 			<div class='flex justify-between items-center mb-4'>
 				<h5
