--- a/Eashire/views/components/PageHeader.handlebars
+++ b/Eashire/views/components/PageHeader.handlebars
@@ -1,3 +1,3 @@
-<h1 class="text-5xl font-semibold w-fit m-auto">
+<h1 class="text-5xl text-center font-semibold w-fit m-auto">
   {{header_text}}
 </h1>
