--- a/Eashire/views/components/buttons/linkButtons/linkButtonsColors/linkButtonRed.handlebars
+++ b/Eashire/views/components/buttons/linkButtons/linkButtonsColors/linkButtonRed.handlebars
@@ -1,6 +1,9 @@
 <a
 	href={{href}}
-	class='flex items-center p-3 w-fit h-fit text-base font-bold text-orange-400 border-solid border border-orange-400 rounded-lg hover:bg-slate-800/50 group hover:shado'
+  {{#if id}}
+    id={{id}}
+  {{/if}}
+	class='focus:outline-none w-fit h-fit text-white bg-red-600 hover:bg-red-700 focus:ring-4 focus:ring-red-900 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2'
 >
 	{{#if svg}}
 		{{#if svg_class}}
@@ -12,4 +15,5 @@
 	{{else}}
 		<span class='flex-1 whitespace-nowrap'>{{title}}</span>
 	{{/if}}
+
 </a>
