feat: calendar layout + calendar sidebar + calendar root page

--- a/Eashire/views/components/workspaceSidebar.handlebars
+++ b/Eashire/views/components/workspaceSidebar.handlebars
@@ -1,4 +1,4 @@
-<div id="sidebar" class="flex flex-col h-full relative truncate w-14 h-full bg-slate-800 transition-all duration-300 overflow-hidden">
+<div id="sidebar" class="flex-none flex flex-col h-full relative truncate w-14 h-full bg-slate-800 transition-all duration-300 overflow-hidden">
   <button id="toggle-button" class="p-4 duration-300 w-14">
     {{>chevron-right-outline}}
   </button>
