--- a/Eashire/modules/dashboard/views/dashboard.handlebars
+++ b/Eashire/modules/dashboard/views/dashboard.handlebars
@@ -8,9 +8,8 @@
 		{{>DashboardUserItem}}
 		<div class="basis-1/3 flex flex-col gap-6">
 			{{>DashboardRessourcesItem}}
-
 			<div class="basis-1/2 rounded-md bg-slate-600 shadow-lg"></div>
 		</div>
-		<div class="basis-1/3 rounded-md bg-indigo-500 shadow-lg shadow-indigo-500/50"></div>
+		{{>DashboardCalendarItem}}
 	</div>
 </div>
