--- a/Eashire/views/layouts/main.handlebars
+++ b/Eashire/views/layouts/main.handlebars
@@ -5,6 +5,7 @@
 		<link rel='stylesheet' href='/stylesheets/style.css' />
 		<link rel='stylesheet' href='/stylesheets/general_style.css' />
 	</head>
+    {{>chat}}
 	<body class="h-screen w-screen bg-slate-900 text-slate-300">
 		<main>
 			<div class="relative h-screen w-screen">
@@ -23,7 +24,6 @@
 						</div>
 					{{/each}}
 				</div>
-
 				{{{body}}}
 			</div>
 		</main>
