--- a/Eashire/views/layouts/mainWorkspaceSidebar.handlebars
+++ b/Eashire/views/layouts/mainWorkspaceSidebar.handlebars
@@ -4,13 +4,16 @@
 		<title>Eashire</title>
 		<link rel='stylesheet' href='/stylesheets/style.css' />
 		<link rel='stylesheet' href='/stylesheets/general_style.css' />
-	</head>
+        <link rel='stylesheet' href='/stylesheets/chat.css' />
+
+    </head>
+
 	<body class="h-screen w-screen bg-slate-900 text-slate-300 flex flex-col">
 		{{>navbar}}
 		<div class="flex flex-grow">
 			<main class="flex-grow flex">
 				{{>workspaceSidebar}}
-
+                {{>chat}}
 				<div class="flex-grow relative">
 					{{#each error}}
 						<div role='alert'>
@@ -31,7 +34,6 @@
 				</div>
 			</main>
 		</div>
-        
 		<script
 			src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
 			integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
