--- a/Eashire/modules/calendar/views/coffeeBreakCreationPage.handlebars
+++ b/Eashire/modules/calendar/views/coffeeBreakCreationPage.handlebars
@@ -1,23 +1,30 @@
 <div class="mt-4">
   {{>PageHeader header_text="☕ Pause café"}}
 </div>
-<div class="flex flex-col m-10 mx-16 w-fit">
+<div class="flex flex-col m-10">
   <form method='post' action={{coffeeBreakCreateLink}} enctype='multipart/form-data'>
-		<label for="countries" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Select an option</label>
-    <select id="countries" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
-      <option selected>Choisir une option</option>
-      <option value="time_5">5 minutes</option>
-      <option value="time_10">10 minutes</option>
-      <option value="time_15">15 minutes</option>
-      <option value="time_20">20 minutes</option>
-      <option value="time_30">30 minutes</option>
-    </select>
-
-    <div class="relative max-w-sm">
-      <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
-        <svg aria-hidden="true" class="w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" clip-rule="evenodd"></path></svg>
+    <div class="flex flex-row place-content-center items-center">
+      <div class="grow flex flex-col justify-center px-4">
+        <label for="countries" class="block mb-2 text-sm font-medium text-white">Sélectionner une durée</label>
+        <div class="relative">
+          <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
+            <svg aria-hidden="true" class="w-5 h-5 text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" clip-rule="evenodd"></path></svg>
+          </div>
+          <input datepicker datepicker-autohide type="text" class="bg-gray-700 border border-gray-600 placeholder-gray-400 text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5" placeholder="Choisir une date">
+        </div>
       </div>
-      <input datepicker datepicker-buttons datepicker-autohide type="text" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Select date">
+
+      <div class="grow flex flex-col justify-center px-4">
+        <label for="countries" class="block mb-2 text-sm font-medium text-white">Sélectionner une durée</label>
+        <select id="countries" class="bg-gray-700 border border-gray-600 placeholder-gray-400 text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+          <option selected>Choisir une option</option>
+          <option value="time_5">5 minutes</option>
+          <option value="time_10">10 minutes</option>
+          <option value="time_15">15 minutes</option>
+          <option value="time_20">20 minutes</option>
+          <option value="time_30">30 minutes</option>
+        </select>
+      </div>
     </div>
     
     {{>FormButton1 button_text="Créer la pause café"}}
