--- a/Eashire/public/stylesheets/style.css
+++ b/Eashire/public/stylesheets/style.css
@@ -569,6 +569,14 @@ video {
   bottom: 0px;
 }
 
+.bottom-4 {
+  bottom: 1rem;
+}
+
+.right-4 {
+  right: 1rem;
+}
+
 .top-3 {
   top: 0.75rem;
 }
@@ -589,6 +597,10 @@ video {
   top: 1.5rem;
 }
 
+.z-20 {
+  z-index: 20;
+}
+
 .z-0 {
   z-index: 0;
 }
@@ -599,10 +611,6 @@ video {
 
 .z-10 {
   z-index: 10;
-}
-
-.z-20 {
-  z-index: 20;
 }
 
 .m-auto {
