--- a/Eashire/views/layouts/mainWorkspaceSidebar.handlebars
+++ b/Eashire/views/layouts/mainWorkspaceSidebar.handlebars
@@ -4,16 +4,18 @@
 		<title>Eashire</title>
 		<link rel='stylesheet' href='/stylesheets/style.css' />
 		<link rel='stylesheet' href='/stylesheets/general_style.css' />
-        <link rel='stylesheet' href='/stylesheets/chat.css' />
-
-    </head>
+		<link rel='stylesheet' href='/stylesheets/chat.css' />
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.0/socket.io.min.js"></script>
+	</head>
 
 	<body class="h-screen w-screen bg-slate-900 text-slate-300 flex flex-col">
 		{{>navbar}}
 		<div class="flex flex-grow">
 			<main class="flex-grow flex">
 				{{>workspaceSidebar}}
-                {{>chat}}
+				{{#if userId}}
+					{{>chat}}
+				{{/if}}
 				<div class="flex-grow relative">
 					{{#each error}}
 						<div role='alert'>
